# Hotel-No-Show-Prediction

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: github-actions.yml
conf/base/catalog/: experiment_artifacts.yml  great_expectations.yml  persisted_datasets.yml  validation_artifacts.yml
conf/base/parameters/: data_ingestion.yml  data_validation.yml  ml_experiment.yml
conf/base/parameters/model_hyperparams/: lightgbm.yml  random_forest.yml  xgboost.yml
configs/: experiment_matrix.yaml  features1.yaml  features2.yaml  random_forest.yaml  shared.yaml  xgboost.yaml
data/processed/: noshow_test.csv
notebooks/: final_results.ipynb  final_results_helpers.py  xgboost_noshow_model.ipynb
reports/model/: best_combination_config.yaml
reports/validation/: noshow_validation_results.json
scripts/: all_stages.sh  clean_data.py  find_best_combination.py  inspect_failed_expectations.py  run_etl.py  run_validation.py  split_train_test.py  stage1.sh  stage2.sh  stage3.sh  stage4.sh  validate_best_combination.py  validate_cleaned_data.py
src/: __init__.py  config.py  extraction.py  loading.py  model_pipeline.py  transformation.py  validation.py
src/hotel_no_show_prediction/: __init__.py  pipeline_registry.py
src/hotel_no_show_prediction/pipelines/: __init__.py
src/hotel_no_show_prediction/pipelines/data_cleaning/: __init__.py  nodes.py  pipeline.py
src/hotel_no_show_prediction/sklearn_pipeline_components/: __init__.py  config_loaders.py  model_registry.py  preprocessor_registry.py
(+29 files in other folders)
